# zk-cpop-interface

./: .gitignore  README.md  package.json
app/: package.json
app/src/app/: globals.css  page.tsx
app/src/components/: Airdrop.tsx  CreateEventForm.tsx  SolanaProvider.tsx
events/: Anchor.toml
events/programs/events/: Cargo.toml
events/programs/events/src/: lib.rs
events/programs/events/src/instructions/: deposit.rs  initialize.rs
events/programs/events/src/state/: event.rs
src/app/: _app.tsx  layout.tsx  page.tsx
src/app/mint/: page.tsx
src/components/: CreateEventForm.tsx
src/lib/: balance.ts  index.ts
