[package]
name = "events"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "events"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]


[dependencies]
anchor-lang = {version = "0.31.0", features = ["init-if-needed"]}
anchor-spl = { version = "0.31.0", features = ["metadata"]}
spl-token-2022 = {version = "8.0.1", features = ["no-entrypoint"]}
spl-token-metadata-interface = "0.7.0"
spl-type-length-value = "0.8.0"
light-compressed-token = "1.2.0" 
light-system-program = "1.2.0"
account-compression = "1.2.0"
light-hasher = "2.0.0"
light-sdk = { version = "0.11.0", features = ["legacy"] }
light-compressed-account = { version = "1.2.0",features = ["anchor"] }